# mcp-server-code-execution-mode

./: .gitignore  ARCHITECTURE.md  Dockerfile  GUIDE.md  HISTORY.md  README.md  STATUS.md  example_config.json  generate_api_docs.py  mcp_server_code_execution_mode.py  prepare.py  pyproject.toml  requirements.txt  test_asyncio_podman.py  test_call.py  test_executor.py  test_mcp_client.py  test_weather_debug.py
.github/agents/: python-sandbox.agent.md
docs/: 01-overview.md  02-core-concepts.md  03-architecture.md  04-execution-flow.md  05-sandbox-runtime.md  06-mcp-proxies-and-rpc.md  07-server-discovery.md  08-creating-mcp-servers.md  09-security-model.md  10-configuration.md  README.md  sandbox-api.md  viz-guidelines.md
servers/: README.md  _template.py  browser.py  countries.py  fx.py  hackernews.py  mcp-servers.json  msforms.py  openlibrary.py  requirements.txt  schemas.py  soccer.py  sports.py  stocks.py  weather.py  wikipedia.py
tests/: debug_questions.py  stub_mcp_server.py  test_browser_standalone.py  test_config_loading.py  test_countries_standalone.py  test_entrypoint.py  test_fx_schema.py  test_hackernews_standalone.py  test_integration.py  test_list_tools_metadata.py  test_matplotlib_mcp.py  test_memory.py  test_msforms_schema.py  test_msforms_standalone.py  test_openlibrary_standalone.py  test_questions_expand.py  test_resources.py  test_rpc_debug.py  test_server_cwd.py  test_server_descriptions.py  test_sports_comprehensive.py  test_stocks_schema.py  test_tool_docs.py  test_toon_responses.py  test_visualization_manual.py  test_wikipedia_schema.py
(+4 files in other folders)
