[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "code-execution"
version = "0.2.0"
description = "An MCP server that executes Python code in isolated rootless containers with optional MCP server proxying."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"mcp>=1.0.0",
	"mypy>=1.18.2",
	"pytest>=9.0.1",
	"pytest-asyncio>=1.3.0",
	"toon-format>=0.9.0b1",
]

[tool.setuptools]
py-modules = ["mcp_server_code_execution_mode", "main"]

[project.scripts]
# This creates the command: mcp-server-code-execution-mode
mcp-server-code-execution-mode = "main:main"
